// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases basic 1`] = `
".bar {
  color: #bf4080;
}


.foo {
  color: #cf649a;
}
"
`;

exports[`cases bundler-options 1`] = `
".foo {
  color: #cf649a;
}


.bar {
  color: #bf4080;
}
"
`;

exports[`cases custom-output 1`] = `
".bar {
  color: #bf4080;
}


.foo {
  color: #cf649a;
}
"
`;

exports[`cases postcss 1`] = `
"$red: #ff0000;


.element {
  color: $red;
}
"
`;

exports[`cases vue 1`] = `
"
.foo {
  color: #41b883;
}


.bar {
  color: #35495d;
}
"
`;

exports[`cases vue3 1`] = `
"
.foo {
  color: #41b883;
}

.bar {
  color: #35495d;
}
"
`;
